Add generic url endpoint
