# db_service_api_rs/api/openapi.yaml
@@ -12,6 +12,33 @@ externalDocs:
 servers:
 - url: /
 paths:
+  /{riot_url}:
+    get:
+      operationId: riotApi
+      parameters:
+      - explode: false
+        in: path
+        name: riot_url
+        required: true
+        schema:
+          format: uri
+          type: string
+        style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                additionalProperties: true
+                type: object
+          description: 200 OK
+        "400":
+          content: {}
+          description: 400 Bad Request
+        "500":
+          content: {}
+          description: 500 Internal Server Error
+      summary: Make riot api request or use cached result
   /{Server}/challenger:
     get:
       parameters:
