# db_service_api_rs/examples/server/server.rs
@@ -96,6 +96,7 @@ impl<C> Server<C> {
 
 use tft_db_service::{
     Api,
+    RiotApiResponse,
     ServerChallengerGetResponse,
     ServerGrandmasterGetResponse,
     ServerMatchListGetResponse,
@@ -107,6 +108,17 @@ use swagger::ApiError;
 #[async_trait]
 impl<C> Api<C> for Server<C> where C: Has<XSpanIdString> + Send + Sync
 {
+    /// Make riot api request or use cached result
+    async fn riot_api(
+        &self,
+        riot_url: String,
+        context: &C) -> Result<RiotApiResponse, ApiError>
+    {
+        let context = context.clone();
+        info!("riot_api(\"{}\") - X-Span-ID: {:?}", riot_url, context.get().0.clone());
+        Err("Generic failuare".into())
+    }
+
     /// Get Challenger League
     async fn server_challenger_get(
         &self,
